[package]
name = "typedoc_json_to_md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
toml = "0.8.13"

